@@ -204,7 +204,7 @@
 				FIRST_LINE_GLOB="&lt;?php" />
 
 <MODE NAME="pike"		FILE="pike.xml"
-				FILE_NAME_GLOB="*.(pike,pmod)" />
+				FILE_NAME_GLOB="*.{pike,pmod}" />
 
 <MODE NAME="pl-sql"		FILE="pl-sql.xml"
 				FILE_NAME_GLOB="*.pls" />
